# anemoi-training

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTORS.md  Contributors.md  README.md  anemoi_jobscript.sh  commits_to_schedule.txt  lumi_train.sh  pyproject.toml  pytest.ini  setup.py
.github/: ci-hpc-config.yml
.github/workflows/: changelog-release-update.yml  ci.yml  label-pr-check.yml  python-publish.yml  python-pull-request.yml  readtthedocs-pr-update.yml
dev/: demo_nn.py  test_data.sh
docs/: conf.py  index.rst  installing.rst  overview.rst
docs/cli/: introduction.rst  profiling.rst  train.rst  train.yaml  training.rst
docs/dev/: code-structure.rst  contributing.rst  hydra.rst  testing.rst
docs/modules/: data.rst  diagnostics.rst  losses.rst  strategy.rst  train.rst
docs/start/: data.rst  getting-started.rst  hydra-intro.rst  installing.rst  training-your-first-model.rst
docs/user-guide/: benchmarking.rst  configuring.rst  debugging.rst  distributed.rst  introduction.rst  logging.rst  models.rst  tracking.rst  training.rst
notebooks/: benchmark_profiler_hta.ipynb
src/: lumi_train.py
src/anemoi/training/: __init__.py  __main__.py  __version__.py
src/anemoi/training/commands/: __init__.py  checkpoint.py  config.py  mlflow.py  profiler.py  train.py
src/anemoi/training/config/: commestest.yaml  config.yaml  debug.yaml  debug1 copy.yaml  debug_dowa.yaml  hierarchical.yaml  lam.yaml  limited_area.yaml  limited_area_stretched.yaml  stretched.yaml  stretched_grid.yaml  stretched_grid_cerra.yaml  stretched_grid_cerra_domain_weighting_0.2.yaml  stretched_grid_cerra_domain_weighting_0.5.yaml  stretched_grid_cerra_domain_weighting_999.yaml  stretched_grid_cerra_domain_weighting_default.yaml  stretched_grid_dowa.yaml
src/anemoi/training/config/data/: zarr.yaml
src/anemoi/training/config/dataloader/: native_grid.yaml  native_grid_excl_sfc.yaml  native_grid_forecast.yaml  native_grid_forecast_icens.yaml  native_grid_reconstruct.yaml  native_grid_reconstruct_icens.yaml  observations.yaml
src/anemoi/training/config/diagnostics/: eval_rollout.yaml  evaluation.yaml  reconstruction.yaml
src/anemoi/training/config/graph/: default.yaml  encoder_decoder_only.yaml  hidden_mesh.yaml  hierarchical_2level.yaml  hierarchical_3level.yaml  lam_multi_scale.yaml  limited_area.yaml  multi_scale.yaml  multiencoder_lam_multi_scale.yaml  stretched_grid.yaml  stretched_multi_scale.yaml
src/anemoi/training/config/hardware/: example.yaml  slurm.yaml
src/anemoi/training/config/model/: gnn.yaml  gnn_ens.yaml  graphtransformer.yaml  graphtransformer_ens.yaml  transformer.yaml  transformer_ens.yaml  transformer_transformermapper.yaml  transformer_vaeEncDec.yaml  transformer_vqvae.yaml  vae.yaml  vae_beta.yaml  vae_hierarichical.yaml  vae_transformer.yaml  vae_vq.yaml
src/anemoi/training/config/training/: default.yaml  diffusion.yaml  ensemble.yaml  forecast_deterministic.yaml  forecast_ensemble_ic.yaml  reconstruct_deterministic.yaml  reconstruct_ensemble_ic.yaml
src/anemoi/training/data/: data_module.py  datamodule.py  datamodule_old.py  dataset.py  grid_indices.py  inicond.py  scaling.py
src/anemoi/training/diagnostics/: callbacks.py  continents.json  logger.py  logging.py  maps.py  mlflow_logger.py  plots.py  profilers.py
src/anemoi/training/diagnostics/callbacks/: __init__.py  checkpoint.py  common_callbacks.py  ensemble_forecast.py  evaluation.py  forecast.py  forecast_ensemble.py  learning_rate.py  optimiser.py  plot.py  plotting.py  profiler.py  provenance.py  reconstruction.py  sanity.py  swa.py  weights.py
src/anemoi/training/diagnostics/metrics/: __init__.py  ranks.py  spread.py
src/anemoi/training/diagnostics/mlflow/: __init__.py  auth.py  client.py  logger.py  utils.py
src/anemoi/training/diagnostics/plots/: plots.py  plots_ensemble.py
src/anemoi/training/distributed/: strategy.py
src/anemoi/training/lightning_module/: anemoi.py  forecasting.py  mixins.py  reconstruction.py
src/anemoi/training/losses/: __init__.py  combined.py  composite.py  divergences.py  energy.py  energy_old.py  huber.py  ignorance.py  kcrps.py  limitedarea.py  logcosh.py  mae.py  mixins.py  mse.py  nodeweights.py  nodeweigths.py  rmse.py  spectra.py  spread_skill.py  utils.py  vae.py  variogram.py  weightedloss.py
src/anemoi/training/metrics/: spread_skill.py
src/anemoi/training/schedulers/rollout/: __init__.py  indexed.py  randomise.py  stepped.py
src/anemoi/training/schemas/: base_schema.py  data.py  dataloader.py  diagnostics.py  hardware.py  training.py  utils.py
src/anemoi/training/schemas/graphs/: base_graph.py  edge_schemas.py  node_schemas.py
src/anemoi/training/schemas/models/: base_model.py  common_components.py  decoder.py  encoder.py  (+5 more)
src/anemoi/training/strategy/: ddp_group_strategy.py
src/anemoi/training/train/: anemoi_lightning_module.py  comm_mixins.py  forecaster.py  forecaster_old.py  interpolator.py  profiler.py  reconstruction.py  reconstruction_old.py  reconstructor.py  train.py
src/anemoi/training/utils/: checkpoint.py  config.py  data_classes.py  jsonify.py  logger.py  masks.py  mlflow_sync.py  seeding.py  spatial_indices.py  usable_indices.py
src/hydra_plugins/anemoi_searchpath/: anemoi_searchpath_plugin.py
tests/: conftest.py  test_anemoi_trainer.py  test_training.py
tests/aicon/: test_cicd_aicon_04_icon-dream_medium.py  test_cicd_aicon_04_icon-dream_medium.yaml
tests/data/: test_data_module.py  test_datamodule.py  test_dataset.py
tests/diagnostics/: test_callbacks.py  test_checkpoint.py
tests/diagnostics/callbacks/: test_common_callbacks.py  test_forecast_callbacks.py  test_forecast_ensemble_callbacks.py  test_reconstruction_callbacks.py  test_variable_order.py
tests/diagnostics/mlflow/: test_auth.py  test_client.py  test_expansion.py
tests/hydra/: test_dataclasses.py  test_search_path_plugins.py
tests/losses/: test_losses.py
tests/metrics/: metrics.py
tests/train/: test_loss_function.py  test_loss_scaling.py  test_nodeweights.py  test_scalar.py  test_scaler.py
tests/utils/: test_usable_indices.py
(+27 files in other folders)
