#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]

[project]
description = "A package to hold various functions to support training of ML models."
name = "anemoi-training"

dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

keywords = ["tools", "training", "ai"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.2",
    "torch-geometric>=2.3.1,<2.5",
    "einops>=0.6.1",
    "anemoi-datasets[data]>=0.1.0",
    "anemoi-utils[provenance]>=0.1.3",
    "anemoi-models@git+https://github.com/ecmwf/anemoi-models.git",
    "pytorch-lightning>=2.1.0",
    "timm>=0.9.2",
    "hydra-core>=1.3",
    "matplotlib>=3.7.1",
    "tqdm>=4.65.0",
    "torchinfo>=1.8.0",
    "zarr>=2.14.2",
    "pre-commit>=3.3.3",
    "mlflow>=2.11.1",
    "pynvml>=11.5.0",
    "mlflow-export-import>=1.2.0",
    "pyshtools>=4.10.4",
]

[project.optional-dependencies]


docs = [
    # For building the documentation
]

all = [
]

dev = [
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "pandoc",
]

[project.urls]
Homepage = "https://github.com/ecmwf/anemoi-training/"
Documentation = "https://anemoi-training.readthedocs.io/"
Repository = "https://github.com/ecmwf/anemoi-training/"
Issues = "https://github.com/ecmwf/anemoi-training/issues"
# Changelog = "https://github.com/ecmwf/anemoi-training/CHANGELOG.md"

[project.scripts]
# Add subcommand in the `commands` directory
anemoi-training = "anemoi.training.__main__:main"

[tool.setuptools_scm]
version_file = "src/anemoi/training/_version.py"
