
#!/usr/bin/env python
# (C) Copyright 2024 ECMWF.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.
# In applying this licence, ECMWF does not waive the privileges and immunities
# granted to it by virtue of its status as an intergovernmental organisation
# nor does it submit to any jurisdiction.

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = [
  "setuptools>=60",
  "setuptools-scm>=8",
]

[project]
name = "anemoi-training"

description = "A package to hold various functions to support training of ML models."
keywords = [
  "ai",
  "tools",
  "training",
]

license = { file = "LICENSE" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]

requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dynamic = [
  "version",
]
dependencies = [
  "anemoi-datasets>=0.1",
  "anemoi-models",
  "anemoi-utils[provenance]>=0.3.7",
  "einops>=0.6.1",
  "hydra-core>=1.3",
  "matplotlib>=3.7.1",
  "mlflow>=2.11.1",
  "mlflow-export-import>=1.2",
  "pre-commit>=3.3.3",
  "pynvml>=11.5",
  "pyshtools>=4.10.4",
  "pytorch-lightning>=2.1",
  "timm>=0.9.2",
  "torch>=2.2",
  "torch-geometric>=2.3.1,<2.5",
  "torchinfo>=1.8",
  "tqdm>=4.65",
  "zarr>=2.14.2",
]

optional-dependencies.all = [
]

optional-dependencies.dev = [
  "nbsphinx",
  "pandoc",
  "pytest",
  "pytest-mock",
  "sphinx",
  "sphinx-argparse",
  "sphinx-rtd-theme",
]

optional-dependencies.docs = [
  "nbsphinx",
  "pandoc",
  "sphinx",
  "sphinx-argparse",
  "sphinx-rtd-theme",
]

optional-dependencies.tests = [
  "pytest",
  "pytest-mock",
]

urls.Documentation = "https://anemoi-training.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/anemoi-training/"
urls.Issues = "https://github.com/ecmwf/anemoi-training/issues"
urls.Repository = "https://github.com/ecmwf/anemoi-training/"
# Changelog = "https://github.com/ecmwf/anemoi-training/CHANGELOG.md"
# Add subcommand in the `commands` directory
scripts.anemoi-training = "anemoi.training.__main__:main"

[tool.setuptools_scm]
version_file = "src/anemoi/training/_version.py"

